# HiWE

./: .gitignore  README.md  act_utils.py  pyproject.toml  requirements.txt
media/: demo.html
scripts/: __init__.py  convert_to_gif.sh  train_segmentation.py
scripts/act/: __init__.py  run_waypoint_extraction.py
scripts/dp/: __init__.py  preprocess.py  relabel_actions.py  run_waypoint_extraction.py  writeback_labels.py
scripts/labeling/: __init__.py  interactive_label.py
src/hiwe/: __init__.py
src/hiwe/segmentation/: __init__.py  model.py
src/hiwe/waypoint/: __init__.py  extract.py  reconstruction.py
